--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://cederdorff.com/img/favicon.webp" />
+      href="https://cederdorff.com/img/favicon.webp"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React SPA Starter</title>
   </head>
