--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://cederdorff.com/img/favicon.webp"
-    />
+    <link rel="icon" type="image/svg+xml" href="images/Favicon.svg" />
     <link
       href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React SPA Starter</title>
+    <title>The Overseer's vault - Your Command Center for DnD</title>
   </head>
   <body>
     <div id="root"></div>
